--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="css/style.css" />
 
-    <script src="js/app.js" defer></script>
+    <script type="module" src="js/app.js" defer></script>
   </head>
   <body>
     <!-- Sign-up form start -->
@@ -60,7 +60,7 @@
               </li>
             </ul>
 
-            <form action="success.html">
+            <form action="success.html" method="get">
               <label for="text"> Email address</label>
 
               <input type="text" placeholder="email@company.com" />
