--- a/success.html
+++ b/success.html
@@ -16,7 +16,8 @@
     </title>
 
     <link rel="stylesheet" href="css/sucess.css" />
-    <script src="js/success.js" defer></script>
+
+    <script src="js/sucess.js" defer></script>
   </head>
   <body>
     <main>
@@ -32,7 +33,9 @@
           inside to confirm your subscription.
         </p>
 
-        <button type="button">Dismiss message</button>
+        <button type="button">
+          <a href="/index.html"> Dismiss message</a>
+        </button>
       </div>
       <!-- Success message end -->
     </main>
