deleted the success html and sucess csss and sucess javascript

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </li>
             </ul>
 
-            <form action="success.html" method="get">
+            <form id="form">
               <label for="text"> Email address</label>
 
               <input type="text" placeholder="email@company.com" />
