--- a/index.html
+++ b/index.html
@@ -66,12 +66,28 @@
               <input type="text" placeholder="email@company.com" />
               <small></small>
 
-              <button type="submit">Subscribe to monthly newsletter</button>
+              <button id="submit">Subscribe to monthly newsletter</button>
             </form>
           </div>
         </div>
 
         <!-- Sign-up form end -->
+      </div>
+
+      <div class="sucess hide">
+        <div class="sucess__img">
+          <img src="assets/images/icon-success.svg" alt="icon-success" />
+        </div>
+        <div class="sucess__content">
+          <h1>Thanks for subscribing!</h1>
+          <p>
+            A confirmation has been sent to
+            <span class="user-email">chidera@gmail.com</span>. Please open it
+            and click the button inside to confirm your subscription
+          </p>
+
+          <button id="dismiss">Dismiss message</button>
+        </div>
       </div>
     </main>
   </body>
