--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
               </li>
             </ul>
 
-            <form id="form">
+            <div class="form">
               <label for="text"> Email address</label>
 
               <input type="text" placeholder="email@company.com" />
               <small></small>
 
               <button id="submit">Subscribe to monthly newsletter</button>
-            </form>
+            </div>
           </div>
         </div>
 
