--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
               </li>
             </ul>
 
-            <div class="form">
+            <form class="form">
               <label for="text"> Email address</label>
 
               <input type="text" placeholder="email@company.com" />
               <small></small>
 
               <button id="submit">Subscribe to monthly newsletter</button>
-            </div>
+            </form>
           </div>
         </div>
 
@@ -82,8 +82,8 @@
           <h1>Thanks for subscribing!</h1>
           <p>
             A confirmation has been sent to
-            <span class="user-email">chidera@gmail.com</span>. Please open it
-            and click the button inside to confirm your subscription
+            <span class="user-email"></span>. Please open it and click the
+            button inside to confirm your subscription
           </p>
 
           <button id="dismiss">Dismiss message</button>
